syntax = "proto3";

option csharp_namespace = "WeatherStation.Contracts";

package weather;

import "google/protobuf/timestamp.proto";

service WeatherService {
        rpc RequestCurrentWeatherData (WeatherRequest) returns (WeatherDataResponse);

        rpc RequestHistoricData(WeatherRequest) returns ( WeatherHistoricResponse);
}

message WeatherRequest {
        string location = 1;
}

message WeatherDataResponse {
        int32 temperature = 1;
        int32 windspeed = 2;
        int32 winddirection = 3;
        string location = 4;
        google.protobuf.Timestamp time = 5;
}

message WeatherHistoricResponse {
        repeated WeatherDataResponse data = 1;
}